@@ -1,5 +1,6 @@
 Version 2.02.91 -
 ===================================
+  Do not use lstat() results when failed in _rm_link().
   Remove a "waiting for another thread" log message from dmeventd plugins.
 
 Version 2.02.90 - 1st February 2012
